--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -4,64 +4,77 @@
     android:layout_height="match_parent"
     tools:context="com.starksky.movies.view.fragment.MovieDetailFragment">
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-       <LinearLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-           <ImageView
-               android:id="@+id/detail_movie_poster"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content" />
+            <ImageView
+                android:id="@+id/detail_movie_poster"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-           <LinearLayout
+            <LinearLayout
 
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-               <TextView
-                   android:id="@+id/detail_movie_title"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginTop="5dp"/>
-               <TextView
-                   android:id="@+id/detail_movie_reldate"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginTop="5dp"/>
-               <TextView
-                   android:id="@+id/detail_movie_rating"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginTop="5dp"/>
+                <TextView
+                    android:id="@+id/detail_movie_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Release Date" />
+
+                <TextView
+                    android:id="@+id/detail_movie_reldate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Rating" />
+
+                <TextView
+                    android:id="@+id/detail_movie_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
 
-           </LinearLayout>
+            </LinearLayout>
 
-       </LinearLayout>
+        </LinearLayout>
 
-       <LinearLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="vertical">
 
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="Synopsis"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Synopsis" />
 
-       <TextView
-           android:id="@+id/movie_detail_synopsis"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="5dp"/>
-       </LinearLayout>
+            <TextView
+                android:id="@+id/movie_detail_synopsis"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
 
-   </LinearLayout>
+    </LinearLayout>
 
 </FrameLayout>
