--- a/app/src/main/res/layout/fragment_grid_poster.xml
+++ b/app/src/main/res/layout/fragment_grid_poster.xml
@@ -8,7 +8,7 @@
     <GridView
         android:id="@+id/postergrid"
         android:layout_width="match_parent"
-        android:numColumns="3"
+        android:numColumns="auto_fit"
         android:layout_height="match_parent"
         android:layout_gravity="left|top">
 
