--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,10 +3,12 @@
     <string-array name="pref_sort_options">
         <item>@string/pref_sort_label_mpop</item>
         <item>@string/pref_sort_label_hrate</item>
+        <item>@string/pref_sort_label_fav</item>
     </string-array>
 
     <string-array name="pref_sort_values">
         <item>@string/pref_sort_mpop</item>
         <item>@string/pref_sort_hrate</item>
+        <item>@string/pref_sort_fav</item>
     </string-array>
 </resources>
