--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -18,13 +18,14 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        tools:layout="@android:layout/list_content" />
+        tools:layout="@layout/fragment_grid_poster" />
 
     <fragment
         android:id="@+id/movie_detail_container"
         android:name="com.starksky.movies.view.fragment.MovieDetailFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="4" />
+        android:layout_weight="4"
+        tools:layout="@layout/fragment_movie_detail" />
 
 </LinearLayout>
