--- a/app/src/main/res/layout/fragment_grid_poster.xml
+++ b/app/src/main/res/layout/fragment_grid_poster.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/movie_grid_poster"
     tools:context="com.starksky.movies.view.fragment.GridPosterFragment">
 
 
