--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -60,6 +60,8 @@
                         android:layout_height="wrap_content" />
 
                     <Button
+                        android:id="@+id/mark_as_fav_button"
+                        android:onClick="favbutton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@color/colorAccent"
