--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,11 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
-    android:id="@+id/container"
     tools:context=".view.activity.MainActivity">
 
     <!--
@@ -21,12 +21,17 @@
         android:layout_weight="2"
         tools:layout="@layout/fragment_grid_poster" />
 
-    <fragment
-        android:id="@+id/movie_detail_container"
-        android:name="com.starksky.movies.view.fragment.MovieDetailFragment"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="4"
-        tools:layout="@layout/fragment_movie_detail" />
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <fragment
+            android:id="@+id/movie_detail_container"
+            android:name="com.starksky.movies.view.fragment.MovieDetailFragment"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            tools:layout="@layout/fragment_movie_detail" />
+    </FrameLayout>
 
 </LinearLayout>
