--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -22,16 +22,10 @@
         tools:layout="@layout/fragment_grid_poster" />
 
     <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <fragment
-            android:id="@+id/movie_detail_container"
-            android:name="com.starksky.movies.view.fragment.MovieDetailFragment"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            tools:layout="@layout/fragment_movie_detail" />
+        android:id="@+id/movie_detail_container"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="4">
     </FrameLayout>
 
 </LinearLayout>
