--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
@@ -20,12 +21,11 @@
         android:layout_weight="2"
         tools:layout="@layout/fragment_grid_poster" />
 
-    <fragment
+    <FrameLayout
         android:id="@+id/movie_detail_container"
-        android:name="com.starksky.movies.view.fragment.MovieDetailFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="4"
-        tools:layout="@layout/fragment_movie_detail" />
+        android:layout_weight="4">
+    </FrameLayout>
 
 </LinearLayout>
