--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -25,7 +25,6 @@
         android:id="@+id/movie_detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="4">
-    </FrameLayout>
+        android:layout_weight="4"></FrameLayout>
 
 </LinearLayout>
