--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -4,13 +4,11 @@
     android:layout_height="match_parent">
 
 
-
     <ListPreference
-        android:title="@string/pref_sort_title"
-        android:key="@string/pref_sort_key"
         android:defaultValue="@string/pref_sort_default"
-        android:entryValues="@array/pref_sort_values"
         android:entries="@array/pref_sort_options"
-        />
+        android:entryValues="@array/pref_sort_values"
+        android:key="@string/pref_sort_key"
+        android:title="@string/pref_sort_title" />
 
 </PreferenceScreen>
